News
====

.. contents::

1.1.1
-----

* Fixed major issue with serving static files on Windows (a regression
  in Paste 1.1 where most static files would return 404 Not Found).

* Fixed ``parse_dict_querystring`` returning empty dicts instead of
  ``MultiDict``s.

* Added ``paste.config``, a rewrite of ``paste.deploy.config`` using
  ``paste.registry``. This version of ``ConfigMiddleware`` will
  enable use of ``paste.config.CONFIG`` within the ``EvalException``
  interactive debugger.

* Fixed problem where ``paste.recursive`` would leave ``wsgi.input``
  and ``CONTENT_LENGTH`` set for recursive requests.

* Changed the static file servers to give 404 Not Found responses when
  you have extra parts after a static file, instead of 400 Bad
  Request (like when you request ``/file.html/extra/path``)

1.1
---

* Security fix for ``paste.urlparser.StaticURLParser``.  The problem
  allowed escaping the root (and reading files) when used with
  ``paste.httpserver`` (this does not effect other servers, and does
  not apply when proxying requests from Apache to
  ``paste.httpserver``).

* ``paste.httpserver`` and ``paste.fixture.TestApp`` url-unquote
  ``SCRIPT_NAME`` and ``PATH_INFO``, as specified in the CGI spec.
  Thanks to Jon Nelson for pointing out both these issues.

* ``paste.registry`` now works within the ``EvalException``
  interactive debugger.

* Fixed ``paste.auth.open_id`` failures not returning a correct
  response.

* Changed ``paste.httpexceptions.HTTPUnauthorized`` so that the
  ``WWW-Authenticate`` header is not required.  401 responses don't
  *have* to have that header.

* In ``paste.fixture.TestApp``: ``<form>`` tags that have to
  ``action`` will preserve the existing query string.  (Generally
  relative links that are completely empty should but were not
  preserving the query string)

* Made ``paste.*`` compatible with `py2exe <http://www.py2exe.org/>`_
  by adding a ``modulefinder`` call in ``__init__.py``
